[package]
name = "freefare-sys"
version = "0.2.0"
authors = ["Daniel Griffin <mail@danielgriffin.me>"]
description = "FFI bindings for the libfreefare library"
documentation = "https://github.com/dsgriffin/freefare-sys"
homepage = "https://github.com/dsgriffin/freefare-sys"
repository = "https://github.com/dsgriffin/freefare-sys"
readme = "README.md"
keywords = ["device", "communication", "nfc"]
license = "MIT"

[dependencies]
libc = "0.2.0"
nfc-sys = "0.1.5"
